# example_package_egoossen

./: Makefile  README.md  pyproject.toml
tests/: test_example_package.py
