[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_egoossen"
version = "0.0.1"
authors = [
    { name="Elijah Goossen", email="ekgoossen@gmail.com" },
]
description = "A small example package"
redame = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://guthub.com/pypa/sampleproject/issues"
